--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: PPGoshaReg;
+  src: url("/fonts/PPGoshaSans-Regular.otf") format("opentype");
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@font-face {
+  font-family: PPGoshaBold;
+  src: url("/fonts/PPGoshaSans-Bold.otf") format("opentype");
 }
